--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html>
 <body>
-        <h1>HALO Bara Ganteng</h1>
-        Version: 1.1
+        <h1>Halo Bara Ganteng, Keren Nih Test Beanstalk nya</h1>
 </body>
 </html>
